# agent

./: .gitignore  README.md  main.py  pyproject.toml
agent_core/: __init__.py  agent.py  base_tool.py  clients.py  conversation_manager.py  customer_tools.py  factory.py
data/: orders.json  products.json
tests/: test_customer.py
